--- a/src/shared/locales/ru.json
+++ b/src/shared/locales/ru.json
@@ -47,5 +47,41 @@
 			"placeholder": "Поиск...",
 			"button": "Найти"
 		}
+	},
+	"auth": {
+		"validation": {
+			"email_required": "Введите email",
+			"email_invalid": "Некорректный email",
+			"password_required": "Введите пароль",
+			"password_min_length": "Пароль должен быть от 8 символов"
+		},
+		"login": {
+			"form": {
+				"email_label": "E-mail:",
+				"email_placeholder": "Введите email",
+				"password_label": "Пароль:",
+				"password_placeholder": "Введите пароль",
+				"submit": "Войти",
+				"loading": "Вход..."
+			},
+			"success": "Вход выполнен успешно",
+			"error_prefix": "Ошибка входа: ",
+			"page_title": "Вход в систему"
+		}
+	},
+	"pages": {
+		"home": "Главная",
+		"user": {
+			"list": "Список пользователей"
+		}
+	},
+	"widgets": {
+		"header": {
+			"logout": "Выход"
+		},
+		"sidebar": {
+			"home": "Главная",
+			"users": "Пользователи"
+		}
 	}
 }
