--- a/src/shared/locales/en.json
+++ b/src/shared/locales/en.json
@@ -83,5 +83,13 @@
             "home": "Home",
             "users": "Users"
         }
+    },
+    "validation": {
+        "user": {
+            "name_required": "Name is required",
+            "name_min": "Name must be at least 2 characters",
+            "email_required": "Email is required",
+            "email_invalid": "Invalid email"
+        }
     }
 }
