Поднял валидацию на уровень страницы

--- a/src/shared/locales/ru.json
+++ b/src/shared/locales/ru.json
@@ -26,7 +26,7 @@
 				"name": "Имя:",
 				"email": "E-mail:",
 				"submit": "Сохранить",
-				"loading": "Сохранение..."
+				"sending": "Сохранение..."
 			}
 		},
 		"delete": {
