--- a/src/shared/locales/en.json
+++ b/src/shared/locales/en.json
@@ -26,7 +26,7 @@
                 "name": "Name:",
                 "email": "Email:",
                 "submit": "Save",
-                "loading": "Saving..."
+                "sending": "Saving..."
             }
         },
         "delete": {
