--- a/src/shared/locales/ru.json
+++ b/src/shared/locales/ru.json
@@ -42,10 +42,6 @@
 				"update": "Ошибка обновления пользователя",
 				"load": "Ошибка загрузки пользователя"
 			}
-		},
-		"search": {
-			"placeholder": "Поиск...",
-			"button": "Найти"
 		}
 	},
 	"auth": {
@@ -85,16 +81,20 @@
 		}
 	},
 	"validation": {
-	    "user": {
-	        "name_required": "Имя обязательно",
-	        "name_min": "Имя должно содержать минимум 2 символа",
-	        "email_required": "Email обязателен",
-	        "email_invalid": "Некорректный email",
-	        "password_required": "Пароль обязателен",
-	        "password_min": "Пароль должен содержать минимум 8 символов",
-	        "confirm_password_required": "Подтверждение пароля обязательно",
-	        "password_match": "Пароли должны совпадать",
-	        "role_required": "Роль обязательна"
-	    }
+		"user": {
+			"name_required": "Имя обязательно",
+			"name_min": "Имя должно содержать минимум 2 символа",
+			"email_required": "Email обязателен",
+			"email_invalid": "Некорректный email",
+			"password_required": "Пароль обязателен",
+			"password_min": "Пароль должен содержать минимум 8 символов",
+			"confirm_password_required": "Подтверждение пароля обязательно",
+			"password_match": "Пароли должны совпадать",
+			"role_required": "Роль обязательна"
+		}
+	},
+	"search_form": {
+		"placeholder": "Поиск...",
+		"button": "Найти"
 	}
 }
